--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "core-js": "~2.4.0"
   },
   "devDependencies": {
+    "@angular/core": "2.0.0",
+    "rxjs": "~5.0.0-beta.12",
+    "zone.js": "~0.6.13",
+
     "core-js": "~2.4.0",
     "jasmine-core": "2.4.1",
 
